Btrfs: add missing brelse when superblock checksum fails

--- a/basicRules.conf
+++ b/basicRules.conf
@@ -1,4 +1,10 @@
 [Proxy]
 #!type replace
 Direct = direct
-Ad-Bl
+Ad-Block = reject
+Ad-GIF = reject-tinygif
+
+[Proxy Group]
+#!type replace
+Proxy = select, Direct
+D
