--- a/basicRules.conf
+++ b/basicRules.conf
@@ -7,4 +7,6 @@ Ad-GIF = reject-tinygif
 [Proxy Group]
 #!type replace
 Proxy = select, Direct
-D
+Domestic = select, Direct, Proxy
+Others = select, Proxy, Direct, Domestic
+AdBlock = sele
