Update from upstream

--- a/basicRules.conf
+++ b/basicRules.conf
@@ -9,4 +9,6 @@ Ad-GIF = reject-tinygif
 Proxy = select, Direct
 Domestic = select, Direct, Proxy
 Others = select, Proxy, Direct, Domestic
-AdBlock = sele
+AdBlock = select, Ad-GIF, Ad-Block, Direct, Proxy
+Apple = select, Direct, Proxy
+AsianTV = s
