--- a/basicRules.conf
+++ b/basicRules.conf
@@ -11,4 +11,7 @@ Domestic = select, Direct, Proxy
 Others = select, Proxy, Direct, Domestic
 AdBlock = select, Ad-GIF, Ad-Block, Direct, Proxy
 Apple = select, Direct, Proxy
-AsianTV = s
+AsianTV = select, Direct, Proxy
+GlobalTV = select, Proxy, Direct
+HBO = select, Proxy, Direct
+Spotify = select, 
