docs(changelog): update

--- a/basicRules.conf
+++ b/basicRules.conf
@@ -14,4 +14,10 @@ Apple = select, Direct, Proxy
 AsianTV = select, Direct, Proxy
 GlobalTV = select, Proxy, Direct
 HBO = select, Proxy, Direct
-Spotify = select, 
+Spotify = select, Proxy, Direct
+Speedtest = select, Proxy, Direct
+
+[Rule]
+#!type replace
+# Rulesets
+R
