added repo to package.json

--- a/basicRules.conf
+++ b/basicRules.conf
@@ -20,4 +20,4 @@ Speedtest = select, Proxy, Direct
 [Rule]
 #!type replace
 # Rulesets
-R
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider
