--- a/basicRules.conf
+++ b/basicRules.conf
@@ -20,4 +20,6 @@ Speedtest = select, Proxy, Direct
 [Rule]
 #!type replace
 # Rulesets
-RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Special.list,DIRECT
+
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/
