--- a/basicRules.conf
+++ b/basicRules.conf
@@ -22,4 +22,5 @@ Speedtest = select, Proxy, Direct
 # Rulesets
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Special.list,DIRECT
 
-RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Netflix.list,GlobalTV
+RULE-SET,https://cdn.jsd
