--- a/basicRules.conf
+++ b/basicRules.conf
@@ -23,4 +23,5 @@ Speedtest = select, Proxy, Direct
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Special.list,DIRECT
 
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Netflix.list,GlobalTV
-RULE-SET,https://cdn.jsd
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Spotify.list,Spotify
+RUL
