--- a/basicRules.conf
+++ b/basicRules.conf
@@ -29,4 +29,5 @@ RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/YouTube%20Music.list,GlobalTV
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/YouTube.list,GlobalTV
 
-RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@maste
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Bilibili.list,AsianTV
+RULE-SET,https://cdn.jsdelivr.net/gh/
