--- a/basicRules.conf
+++ b/basicRules.conf
@@ -30,4 +30,5 @@ RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/YouTube.list,GlobalTV
 
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/Bilibili.list,AsianTV
-RULE-SET,https://cdn.jsdelivr.net/gh/
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Media/iQiyi.list,AsianTV
+RULE-SET,https://cdn.jsdelivr.
