--- a/basicRules.conf
+++ b/basicRules.conf
@@ -71,4 +71,6 @@ RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/PayPal.list,Proxy
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Microsoft.list,Domestic
 
-RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Sur
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Proxy.list,Proxy
+
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@
