--- a/basicRules.conf
+++ b/basicRules.conf
@@ -73,4 +73,6 @@ RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider
 
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Proxy.list,Proxy
 
-RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Apple.list,Apple
+
+RULE-SET,https://cdn.jsdelivr.ne
