--- a/basicRules.conf
+++ b/basicRules.conf
@@ -75,4 +75,5 @@ RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider
 
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Apple.list,Apple
 
-RULE-SET,https://cdn.jsdelivr.ne
+RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Domestic.list,Domestic
+RULE-SET,https://cdn.jsdeli
