--- a/basicRules.conf
+++ b/basicRules.conf
@@ -77,4 +77,10 @@ RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider
 
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Domestic.list,Domestic
 RULE-SET,https://cdn.jsdelivr.net/gh/lhie1/Rules@master/Surge/Surge%203/Provider/Domestic%20IPs.list,Domestic
-RU
+RULE-SET,LAN,DIRECT
+
+GEOIP,CN,Domestic
+FINAL,Others,dns-failed
+
+[Rule]
+#
