fs: ext4: disable support for fallocate FALLOC_FL_PUNCH_HOLE

--- a/basicRules.conf
+++ b/basicRules.conf
@@ -83,4 +83,8 @@ GEOIP,CN,Domestic
 FINAL,Others,dns-failed
 
 [Rule]
-#
+#!type modify
+
+#!insert # > Tool
+#!insert # >> App store connect
+#!insert DOMAIN-
