--- a/basicRules.conf
+++ b/basicRules.conf
@@ -87,4 +87,5 @@ FINAL,Others,dns-failed
 
 #!insert # > Tool
 #!insert # >> App store connect
-#!insert DOMAIN-
+#!insert DOMAIN-SUFFIX,appstoreconnect.apple.com,Proxy
+#!insert DOMAIN-SUFFIX,download.developer.apple.com,D
