--- a/basicRules.conf
+++ b/basicRules.conf
@@ -88,4 +88,8 @@ FINAL,Others,dns-failed
 #!insert # > Tool
 #!insert # >> App store connect
 #!insert DOMAIN-SUFFIX,appstoreconnect.apple.com,Proxy
-#!insert DOMAIN-SUFFIX,download.developer.apple.com,D
+#!insert DOMAIN-SUFFIX,download.developer.apple.com,Direct
+#!insert DOMAIN-SUFFIX,developer.apple.com,Proxy
+
+[URL Rewrite]
+#!ty
