Revert "iwlwifi: dvm: don't enable CTS to self"

--- a/basicRules.conf
+++ b/basicRules.conf
@@ -92,4 +92,5 @@ FINAL,Others,dns-failed
 #!insert DOMAIN-SUFFIX,developer.apple.com,Proxy
 
 [URL Rewrite]
-#!ty
+#!type replace
+#!insert $from('https://raw.githubusercontent.com/DivineEngine/Profiles/master/S
