Minor README edit

--- a/basicRules.conf
+++ b/basicRules.conf
@@ -93,4 +93,4 @@ FINAL,Others,dns-failed
 
 [URL Rewrite]
 #!type replace
-#!insert $from('https://raw.githubusercontent.com/DivineEngine/Profiles/master/S
+#!insert $from('https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Module/General.sgmodule')
