--- a/head.conf
+++ b/head.conf
@@ -1,4 +1,7 @@
 [General]
 #!type replace
 # > General
-http-listen = 0.0.0.0
+http-listen = 0.0.0.0:8888
+socks5-listen = 0.0.0.0:8889
+
+external-controller-access = Kaelzs@0.0.0.0:6
