Remove unneeded method

--- a/head.conf
+++ b/head.conf
@@ -4,4 +4,7 @@
 http-listen = 0.0.0.0:8888
 socks5-listen = 0.0.0.0:8889
 
-external-controller-access = Kaelzs@0.0.0.0:6
+external-controller-access = Kaelzs@0.0.0.0:6170
+
+internet-test-url = http://www.aliyun.com
+proxy-test-url = http://www.gstati
