--- a/head.conf
+++ b/head.conf
@@ -7,4 +7,9 @@ socks5-listen = 0.0.0.0:8889
 external-controller-access = Kaelzs@0.0.0.0:6170
 
 internet-test-url = http://www.aliyun.com
-proxy-test-url = http://www.gstati
+proxy-test-url = http://www.gstatic.com/generate_204
+
+test-timeout = 5
+ipv6 = true
+show-error-page-for-reject = true
+replica 
