--- a/head.conf
+++ b/head.conf
@@ -12,4 +12,9 @@ proxy-test-url = http://www.gstatic.com/generate_204
 test-timeout = 5
 ipv6 = true
 show-error-page-for-reject = true
-replica 
+replica = false
+
+# > DNS
+dns-server = system, 117.50.10.10, 223.5.5.5, 114.114.114.114, 119.29.29.29
+
+#
