Testing custom type 'firewall_rule'

--- a/head.conf
+++ b/head.conf
@@ -22,4 +22,6 @@ loglevel = notify
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com
 bypass-tun = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
 bypass-system = true
-com
+compatibility-mode = 0
+exclude-simple-hostnames = true
+use-default-policy-if-wifi
