drm/i915: don't pwrite tiled objects through the gtt

--- a/head.conf
+++ b/head.conf
@@ -24,4 +24,6 @@ bypass-tun = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
 bypass-system = true
 compatibility-mode = 0
 exclude-simple-hostnames = true
-use-default-policy-if-wifi
+use-default-policy-if-wifi-not-primary = false
+tls-provider = openssl
+geoip-maxmind-url = https://raw.githubusercon
