--- a/head.conf
+++ b/head.conf
@@ -26,4 +26,7 @@ compatibility-mode = 0
 exclude-simple-hostnames = true
 use-default-policy-if-wifi-not-primary = false
 tls-provider = openssl
-geoip-maxmind-url = https://raw.githubusercon
+geoip-maxmind-url = https://raw.githubusercontent.com/JMVoid/ipip2mmdb/release/Country.mmdb
+
+# > Wifi access
+interface = 127.0.0.1
