--- a/head.conf
+++ b/head.conf
@@ -30,3 +30,9 @@ geoip-maxmind-url = https://raw.githubusercontent.com/JMVoid/ipip2mmdb/release/C
 
 # > Wifi access
 interface = 127.0.0.1
+port = 6152
+socks-port = 6153
+
+allow-wifi-access = true
+wifi-access-http-port = 6152
+wifi-a
