--- a/head.conf
+++ b/head.conf
@@ -35,4 +35,7 @@ socks-port = 6153
 
 allow-wifi-access = true
 wifi-access-http-port = 6152
-wifi-a
+wifi-access-socks5-port = 6153
+
+# > For Ps Switch Xbox
+always-real-ip = *.srv.nint
