--- a/head.conf
+++ b/head.conf
@@ -38,4 +38,4 @@ wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
 
 # > For Ps Switch Xbox
-always-real-ip = *.srv.nint
+always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, *.msftconnecttest.com, *.msftncsi.com, *.xbox
