--- a/head.conf
+++ b/head.conf
@@ -38,4 +38,8 @@ wifi-access-http-port = 6152
 wifi-access-socks5-port = 6153
 
 # > For Ps Switch Xbox
-always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, *.msftconnecttest.com, *.msftncsi.com, *.xboxlive.com, msftconnecttest.com, xbox.*.microsoft.com, *.blzstatic.cn, *.battlenet.com.cn, *.battle
+always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, *.msftconnecttest.com, *.msftncsi.com, *.xboxlive.com, msftconnecttest.com, xbox.*.microsoft.com, *.blzstatic.cn, *.battlenet.com.cn, *.battlenet.com, *.battle.net
+hijack-dns = 8.8.8.8:53, 8.8.4.4:53
+
+# > Others
+netwo
