--- a/head.conf
+++ b/head.conf
@@ -42,4 +42,6 @@ always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, *.msftconnecttest.c
 hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 
 # > Others
-netwo
+network-framework = false
+enhanced-mode-by-rule = false
+force-http-engine-hosts = 123.59.31.1, 119.
