--- a/head.conf
+++ b/head.conf
@@ -44,4 +44,9 @@ hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > Others
 network-framework = false
 enhanced-mode-by-rule = false
-force-http-engine-hosts = 123.59.31.1, 119.
+force-http-engine-hosts = 123.59.31.1, 119.18.193.135, 122.14.246.33, 175.102.178.52
+
+[Replica]
+#!type replace
+# > Options
+hide-apple-requ
