Added a LICENSE file.

--- a/head.conf
+++ b/head.conf
@@ -49,4 +49,7 @@ force-http-engine-hosts = 123.59.31.1, 119.18.193.135, 122.14.246.33, 175.102.17
 [Replica]
 #!type replace
 # > Options
-hide-apple-requ
+hide-apple-request = false
+hide-crash-reporter-request = true
+hide-udp = false
+use-keyword-filter = false
