--- a/other.conf
+++ b/other.conf
@@ -1,3 +1,3 @@
 [Header Rewrite]
 #!type replace
-#!insert $fro
+#!insert $from('https://raw.githubusercontent.com/lhie1/Rules/master/Auto/Header%20Rew
