--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,6 @@
 # ================================
 # Build image
-# ============================
+# ================================
+FROM swift:5.6-focal as build
+
+# Install OS updates and, if needed, sqli
