--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,4 +3,6 @@
 # ================================
 FROM swift:5.6-focal as build
 
-# Install OS updates and, if needed, sqli
+# Install OS updates and, if needed, sqlite3
+RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
+    && apt-get -q
