--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,4 +15,10 @@ WORKDIR /build
 # First just resolve dependencies.
 # This creates a cached layer that can be reused
 # as long as your Package.swift/Package.resolved
-# files do not chan
+# files do not change.
+COPY ./Package.* ./
+RUN swift package resolve
+
+# Copy entire repo into container
+COPY . .
+
