KULRICE-2437 replaced kew workgroup with kim group

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -34,4 +34,5 @@ RUN cp "$(swift build --package-path /build -c release --show-bin-path)/Run" ./
 # Copy resources bundled by SPM to staging area
 RUN find -L "$(swift build --package-path /build -c release --show-bin-path)/" -regex '.*\.resources$' -exec cp -Ra {} ./ \;
 
-# Copy any resources from the public directory and views directory if the direct
+# Copy any resources from the public directory and views directory if the directories exist
+# Ensure that by default, neither the directory nor any 
