--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -35,4 +35,5 @@ RUN cp "$(swift build --package-path /build -c release --show-bin-path)/Run" ./
 RUN find -L "$(swift build --package-path /build -c release --show-bin-path)/" -regex '.*\.resources$' -exec cp -Ra {} ./ \;
 
 # Copy any resources from the public directory and views directory if the directories exist
-# Ensure that by default, neither the directory nor any 
+# Ensure that by default, neither the directory nor any of its contents are writable.
+RUN [ -d /build/Public ] && { mv /build/Public ./Pu
