--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -44,4 +44,6 @@ RUN [ -d /build/Resources ] && { mv /build/Resources ./Resources && chmod -R a-w
 # ================================
 FROM ubuntu:focal
 
-# Make sure all system packages are up to date, and install only essential 
+# Make sure all system packages are up to date, and install only essential packages.
+RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
+    
