--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -46,4 +46,6 @@ FROM ubuntu:focal
 
 # Make sure all system packages are up to date, and install only essential packages.
 RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
-    
+    && apt-get -q update \
+    && apt-get -q dist-upgrade -y \
+    && apt-get -q install 
