Updating requirements.txt

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -48,4 +48,7 @@ FROM ubuntu:focal
 RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
     && apt-get -q update \
     && apt-get -q dist-upgrade -y \
-    && apt-get -q install 
+    && apt-get -q install -y \
+      ca-certificates \
+      tzdata \
+# If your app or its dependencies import FoundationNetw
