--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -53,4 +53,8 @@ RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
       tzdata \
 # If your app or its dependencies import FoundationNetworking, also install `libcurl4`.
       libcurl4 \
-# If your app or its dependencies import FoundationXM
+# If your app or its dependencies import FoundationXML, also install `libxml2`.
+      # libxml2 \
+    && rm -r /var/lib/apt/lists/*
+
+# C
