--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -57,4 +57,5 @@ RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
       # libxml2 \
     && rm -r /var/lib/apt/lists/*
 
-# C
+# Create a vapor user and group with /app as its home directory
+RUN usera
