--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -58,4 +58,4 @@ RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true \
     && rm -r /var/lib/apt/lists/*
 
 # Create a vapor user and group with /app as its home directory
-RUN usera
+RUN useradd --user-group --create-home --system --skel /dev/null --home-
