--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -69,3 +69,7 @@ COPY --from=build --chown=vapor:vapor /staging /app
 # Ensure all further commands run as the vapor user
 USER vapor:vapor
 
+# Let Docker bind to port 8080
+EXPOSE 8080
+
+# Start the Vapor service when the imag
