--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,4 +6,7 @@
 # Note: This file is intended for testing and does not
 # implement best practices for a production deployment.
 #
-# Learn more: https://
+# Learn more: https://docs.docker.com/compose/reference/
+#
+#   Build images: docker-compose build
+# 
