--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -9,4 +9,7 @@
 # Learn more: https://docs.docker.com/compose/reference/
 #
 #   Build images: docker-compose build
-# 
+#      Start app: docker-compose up app
+#       Stop all: docker-compose down
+#
+ver
