--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -17,4 +17,10 @@ version: '3.7'
 x-shared_environment: &shared_environment
   LOG_LEVEL: ${LOG_LEVEL:-debug}
 
-servi
+services:
+  app:
+    image: server:latest
+    build:
+      context: .
+    environment:
+      <<: *sh
