Initial project commit.

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -23,4 +23,7 @@ services:
     build:
       context: .
     environment:
-      <<: *sh
+      <<: *shared_environment
+    ports:
+      - '8080:8080'
+    # user: '0' # uncomment to run 
