--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -26,4 +26,5 @@ services:
       <<: *shared_environment
     ports:
       - '8080:8080'
-    # user: '0' # uncomment to run 
+    # user: '0' # uncomment to run as root for testing purposes even though Dockerfile defines 'vapor' user.
+    com
